LPD-97011 seo-studio-rest-impl - Add autofix and page-content operations
